@@ -112,7 +112,7 @@ public class DeleteGetNodesServlet extends HttpServlet {
                 }
             }
             // FIXME: linecount never modified???
-            userSession.setAttribute("lineItems.delete.jsp", new Integer(lineCount));
+            userSession.setAttribute("lineItems.delete.jsp", Integer.valueOf(lineCount));
 
             nodeSet.close();
         } finally {
